--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_statusbarcolor: ^0.2.3
+  flutter_signin_button: ^1.1.0
+  google_fonts: ^1.1.0
+  font_awesome_flutter: ^8.8.1
+  device_preview: ^0.4.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
