--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^1.1.0
   font_awesome_flutter: ^8.8.1
   device_preview: ^0.4.8
+  simple_animations: ^2.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
