--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   device_preview: ^0.4.8
   simple_animations: ^2.2.1
+  get_it: ^4.0.4
+  http: ^0.12.2
+  json_serializable: ^3.4.1
+  fluttertoast: ^7.0.4
 dev_dependencies:
+  build_runner: ^1.10.1
   flutter_test:
     sdk: flutter
 
