--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.12.2
   json_serializable: ^3.4.1
   fluttertoast: ^7.0.4
+  provider: ^4.3.2+2
 dev_dependencies:
   build_runner: ^1.10.1
   flutter_test:
@@ -57,7 +58,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
-    - images/loading.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
