--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_statusbarcolor: ^0.2.3
   flutter_signin_button: ^1.1.0
-  google_fonts: ^1.1.0
   font_awesome_flutter: ^8.8.1
   device_preview: ^0.4.8
   simple_animations: ^2.2.1
@@ -39,6 +38,8 @@ dependencies:
   json_serializable: ^3.4.1
   fluttertoast: ^7.0.4
   provider: ^4.3.2+2
+  lite_rolling_switch: ^0.1.1
+  custom_switch: ^0.0.1
 dev_dependencies:
   build_runner: ^1.10.1
   flutter_test:
@@ -70,17 +71,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: TitiliumWeb
+      fonts:
+        - asset: fonts/TitilliumWeb-Black.ttf
+    - family: Rajdhani
+      fonts:
+        - asset: fonts/Rajdhani-Bold.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
