--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_statusbarcolor: ^0.2.3
   flutter_signin_button: ^1.1.0
   font_awesome_flutter: ^8.8.1
   device_preview: ^0.4.8
@@ -40,6 +39,7 @@ dependencies:
   provider: ^4.3.2+2
   lite_rolling_switch: ^0.1.1
   custom_switch: ^0.0.1
+  rxdart: ^0.24.1
 dev_dependencies:
   build_runner: ^1.10.1
   flutter_test:
