--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   fluttertoast: ^7.0.4
   provider: ^4.3.2+2
   lite_rolling_switch: ^0.1.1
-  custom_switch: ^0.0.1
+  flutter_switch: ^0.1.1
   rxdart: ^0.24.1
 dev_dependencies:
   build_runner: ^1.10.1
